--- a/Nederland-Beterland.html
+++ b/Nederland-Beterland.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Nederland Beterland</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -62,7 +62,7 @@
         <div class="comp-list">
             <div class="comp">
                 <img class="mini left" src="assets/Ellipse-klein.svg" alt="">
-                <p class="right comp-p">Een duidelijk verhaal leren maken (storytelling)</p>
+                <p class="right comp-p">Een duidelijk verhaal leren maken (storytelling).</p>
                 <div class="clear-fix"></div>
             </div>
             <div class="comp">
@@ -71,13 +71,14 @@
                 <div class="clear-fix"></div>
             </div>
         </div>
-        <img src="assets/spraak-NB.png" alt="">
+        <img class="foto-responsive header-spacing-groot" src="assets/spraak-NB.png" alt="">
     </div>
-    <div class="groter-margin">
-        <img src="assets/kamer-1.png" alt="">
-        <img src="assets/kamer-2.png" alt="">
+    <div class="groter-margin header-spacing-padding">
+        <img class="map" src="assets/kamer-1.png" alt="">
+        <img class="right header-spacing-groot" src="assets/kamer-2.png" alt="">
+        <div class="clear-fix"></div>
         <a href="Nederland-Beterland.html">
-            <img src="assets/pijl.png" alt=""></a>
+            <img class="midden" src="assets/pijl.png" alt=""></a>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
         <script src="js/script.js"></script>
 </body>
