--- a/Tuin-van-Eden.html
+++ b/Tuin-van-Eden.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tuin van Eden</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -32,7 +32,7 @@
     </div>
     <div class="header-gvl">
         <h1 class="center orange">Tuin van Eden</h1>
-        <img class="foto-gvl" src="assets/gras-tve.png" alt="">
+        <img class="foto-gvl foto-responsive" src="assets/gras-tve.png" alt="">
     </div>
 
     <div class="werk-body">
@@ -54,24 +54,25 @@
             <img class="klein right" src="assets/Ellipse-concept.png" alt="">
             <div class="clear-fix"></div>
         </div>
-        <img src="assets/kleuren-tve.png" alt="">
+        <img class="foto-responsive header-spacing-groot" src="assets/kleuren-tve.png" alt="">
         <div class="comp-list">
             <img class="mini left" src="assets/Ellipse-klein.svg" alt="">
-            <p class="right comp-p">Dieper in gegaan op de mogelijkheden met Illustator</p>
+            <p class="right comp-p">Dieper in gegaan op de mogelijkheden met Illustator.</p>
             <div class="clear-fix"></div>
             <img class="mini left" src="assets/Ellipse-klein.svg" alt="">
-            <p class="right comp-p">Eerste opdracht buiten school voor een opdrachtgever</p>
+            <p class="right comp-p">Eerste opdracht buiten school voor een opdrachtgever.</p>
             <div class="clear-fix"></div>
 
         </div>
 
     </div>
-    <div class="groter-margin">
-        <img src="assets/Tuin-van-Eden-factsheet-totaal.png" alt="">
+    <div class="groter-margin header-spacing-padding">
+        <img class="foto-responsive header-spacing-groot" src="assets/Tuin-van-Eden-factsheet-totaal.png" alt="">
         <a href="Tuin-van-Eden.html">
-            <img src="assets/pijl.png" alt=""></a>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-        <script src="js/script.js"></script>
+            <img class="midden" src="assets/pijl.png" alt=""></a>
+    </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
