--- a/projecten.html
+++ b/projecten.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>projecten</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -76,7 +76,7 @@
 
         <div class="clear-fix"></div>
 
-        <div class="container museum">
+        <!-- <div class="container museum">
             <img class="foto-GvL" src="assets/museum.png" alt="">
             <div class="overlay-GvL"></div>
             <div class="text-GvL">
@@ -85,7 +85,7 @@
                     interesse in kunst had ik veel vraagtekens bij de komst van 'Instagram musea'. Dit heb ik verwerkt
                     in mijn online magazine.</p>
             </div>
-        </div>
+        </div> -->
     </div>
 
 
