--- a/Dutch-Hacking-Health.html
+++ b/Dutch-Hacking-Health.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dutch Hacking Health</title>
+    <title>Document</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -31,7 +31,7 @@
         <div class="clear-fix"></div>
     </div>
     <div class="header-gvl">
-        <h1 class="center orange header-spacing">Kracht Kompas</h1>
+        <h1 class="center orange">Kracht Kompas</h1>
         <img class="midden" src="assets/kk-logo.png" alt="">
     </div>
 
@@ -67,21 +67,21 @@
 
         <div class="comp-list">
             <img class="mini left" src="assets/Ellipse-klein.svg" alt="">
-            <p class="right comp-p">Werken in een team van verschillende vakgebieden (uit de praktijk, zorg en design).
-            </p>
+            <p class="right comp-p">Dieper in gegaan op de mogelijkheden met Illustator</p>
+            <div class="clear-fix"></div>
+            <img class="mini left" src="assets/Ellipse-klein.svg" alt="">
+            <p class="right comp-p">Eerste opdracht buiten school voor een opdrachtgever</p>
             <div class="clear-fix"></div>
 
-
         </div>
-        <img class="header-spacing-groot foto-responsive" src="assets/kk-slogan.png" alt="">
+        <img src="assets/kk-slogan.png" alt="">
     </div>
-    <div class="groter-margin header-spacing-padding">
-        <img class="header-spacing-groot foto-responsive" src="assets/storyboard-kk.png" alt="">
+    <div class="groter-margin">
+        <img src="assets/storyboard-kk.png" alt="">
         <a href="Dutch-Hacking-Health.html">
             <img class="midden" src="assets/pijl.png" alt=""></a>
-    </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-    <script src="js/script.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+        <script src="js/script.js"></script>
 </body>
 
 </html>
