--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Janou</title>
+    <title>Document</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -30,6 +30,13 @@
 
         <div class="clear-fix"></div>
     </div>
+
+    <!-- <div class="ham">
+        <div class="streep"></div>
+        <div class="streep"></div>
+        <div class="streep"></div>
+    </div> -->
+
 
     <div class="header">
         <div class="voorstel">
