--- a/Dutch-Hacking-Health.html
+++ b/Dutch-Hacking-Health.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Kracht Kompas</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -32,7 +32,8 @@
     </div>
     <div class="header-gvl">
         <h1 class="center orange">Kracht Kompas</h1>
-        <img class="midden" src="assets/kk-logo.png" alt="">
+        <p class="orange center">2023 - Dutch Hacking Health</p>
+        <img class="kk-logo" src="assets/kk-logo.png" alt="">
     </div>
 
     <div class="werk-body">
@@ -67,19 +68,22 @@
 
         <div class="comp-list">
             <img class="mini left" src="assets/Ellipse-klein.svg" alt="">
-            <p class="right comp-p">Dieper in gegaan op de mogelijkheden met Illustator</p>
+            <p class="right comp-p">Aan de slag gegaan met een team uit verschillende vakgebieden.</p>
             <div class="clear-fix"></div>
             <img class="mini left" src="assets/Ellipse-klein.svg" alt="">
-            <p class="right comp-p">Eerste opdracht buiten school voor een opdrachtgever</p>
+            <p class="right comp-p">Rol als designer kunnen nemen in een team.</p>
             <div class="clear-fix"></div>
-
+            <img class="mini left" src="assets/Ellipse-klein.svg" alt="">
+            <p class="right comp-p">Het proces van design thinking kunnen toepassen en uitleggen binnen het hele team.
+            </p>
+            <div class="clear-fix"></div>
         </div>
-        <img src="assets/kk-slogan.png" alt="">
+        <img class="header-spacing" src="assets/kk-slogan.png" alt="">
     </div>
     <div class="groter-margin">
         <img src="assets/storyboard-kk.png" alt="">
         <a href="Dutch-Hacking-Health.html">
-            <img class="midden" src="assets/pijl.png" alt=""></a>
+            <img class="pijl-img" src="assets/pijl.png" alt=""></a>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
         <script src="js/script.js"></script>
 </body>
