--- a/Nederland-Beterland.html
+++ b/Nederland-Beterland.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Nederland Beterland</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -31,8 +31,8 @@
         <div class="clear-fix"></div>
     </div>
     <div class="header-gvl">
-        <h1 class="center orange">Nederland Beterland</h1>
-
+        <h1 class="center orange title-width">Nederland Beterland</h1>
+        <p class="orange center">2022 - CBS</p>
     </div>
 
     <div class="werk-body">
@@ -62,7 +62,7 @@
         <div class="comp-list">
             <div class="comp">
                 <img class="mini left" src="assets/Ellipse-klein.svg" alt="">
-                <p class="right comp-p">Een duidelijk verhaal leren maken (storytelling)</p>
+                <p class="right comp-p">Een duidelijk verhaal leren maken (storytelling).</p>
                 <div class="clear-fix"></div>
             </div>
             <div class="comp">
@@ -70,14 +70,27 @@
                 <p class="right comp-p">Data verwerken in visuals.</p>
                 <div class="clear-fix"></div>
             </div>
+            <div class="comp">
+                <img class="mini left" src="assets/Ellipse-klein.svg" alt="">
+                <p class="right comp-p">Dieper ingegaan op de mogelijkheden met het coderen van een site.</p>
+                <div class="clear-fix"></div>
+            </div>
         </div>
-        <img src="assets/spraak-NB.png" alt="">
+        <img class="spraak-img" src="assets/spraak-NB.png" alt="">
     </div>
     <div class="groter-margin">
         <img src="assets/kamer-1.png" alt="">
         <img src="assets/kamer-2.png" alt="">
+        <div class="link-zin center">
+            <p>Bekijk de hele multimedia story Nederland Beterland <a href="https://mia-mms-2223.github.io/team01/"
+                    target="_blank">
+                    <p class="orange">hier!</p>
+                </a></p>
+
+
+        </div>
         <a href="Nederland-Beterland.html">
-            <img src="assets/pijl.png" alt=""></a>
+            <img class="pijl-img" src="assets/pijl.png" alt=""></a>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
         <script src="js/script.js"></script>
 </body>
