--- a/modern-museum.html
+++ b/modern-museum.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tuin van Eden</title>
+    <title>Modern Museum</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -31,45 +31,61 @@
         <div class="clear-fix"></div>
     </div>
     <div class="header-gvl">
-        <h1 class="center orange">Tuin van Eden</h1>
-        <p class="orange center">2023</p>
-        <img class="foto-gvl" src="assets/gras-tve.png" alt="">
+        <h1 class="center orange">Modern Museum</h1>
+        <p class="orange center">2021</p>
+
     </div>
 
     <div class="werk-body">
 
         <img class="klein left" src="assets/Ellipse-opdracht.png" alt="">
 
-        <p class="opdracht-p">Het project Tuin van Eden is een initatief van het lectoraat van fysiologie. Ze wilden hun
-            proces van het hele project vastleggen in een factsheet.
+        <p class="opdracht-p">Het eerste project binnen de opleiding was het maken van een online magazine. Vanuit mijn
+            interesse in kunst had ik veel vraagtekens bij de komst van 'Instagram musea'. Dit heb ik verwerkt in mijn
+            online magazine.<br><br>
+            Ook hebben we voor het magazine een artikel geschreven vanuit onderzoek op internet, maar ook door
+            verschillende musea te bezoeken. Ook is er een interview gehouden voor het artikel.
+            Om het magazine compleet te maken zijn de foto’s zelf gemaakt.
+
+
         </p>
         <div class="clear-fix"></div>
 
         <div class="concept">
-            <p class="concept-p">Tuin van Eden is een project om natuureducatie aan te bieden op verschillende plekken.
-                Ik wilde in het factsheet dus veel natuurelementen voor laten komen. Om het proces vast te leggen ben ik
-                zo op het idee gekomen om dit via het ontkiemingsproces te doen. Het laat namelijk heel mooi staps
-                gewijs de voortgang zien.
-                Ook de kleuren heb ik op basis van de natuur gedaan. Het vormt zo een goed geheel.
+            <p class="concept-p">Dit is de aller eerste site die ik heb ontworpen en gecodeerd. Het design wilde ik
+                graag klassiek, maar ook modern houden om in de stijl van musea te blijven.
+
             </p>
             <img class="klein right" src="assets/Ellipse-concept.png" alt="">
             <div class="clear-fix"></div>
         </div>
-        <img src="assets/kleuren-tve.png" alt="">
+
         <div class="comp-list">
             <img class="mini left" src="assets/Ellipse-klein.svg" alt="">
-            <p class="right comp-p">Dieper in gegaan op de mogelijkheden met Illustator.</p>
+            <p class="right comp-p">Een goede site leren designen en coderen.</p>
             <div class="clear-fix"></div>
             <img class="mini left" src="assets/Ellipse-klein.svg" alt="">
-            <p class="right comp-p">Eerste opdracht buiten school voor een opdrachtgever.</p>
+            <p class="right comp-p">Bijpassende foto's leren maken die iets vertellen over het artikel.</p>
             <div class="clear-fix"></div>
-
+            <img class="mini left" src="assets/Ellipse-klein.svg" alt="">
+            <p class="right comp-p">Een goed artikel leren schrijven.
+            </p>
+            <div class="clear-fix"></div>
         </div>
 
     </div>
     <div class="groter-margin">
-        <img src="assets/Tuin-van-Eden-factsheet-totaal.png" alt="">
-        <a href="Tuin-van-Eden.html">
+        <img src="assets/site1.png" alt="">
+        <img src="assets/site2.png" alt="">
+        <img src="assets/site3.png" alt="">
+        <img src="assets/site4.png" alt="">
+        <div class="link-zin center">
+            <p>Bekijk het online magazine Modern Museum</p>
+            <a href="https://janouverdellen.github.io/Blok1eind/index.html" target="_blank">
+                <p class="orange">hier!</p>
+            </a>
+        </div>
+        <a href="modern-museum.html">
             <img class="pijl-img" src="assets/pijl.png" alt=""></a>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
         <script src="js/script.js"></script>
