--- a/projecten.html
+++ b/projecten.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Projecten</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -78,13 +78,13 @@
 
         <div class="container museum">
             <img class="foto-GvL" src="assets/museum.png" alt="">
-            <div class="overlay-GvL"></div>
-            <div class="text-GvL">
+            <a href="modern-museum.html" class="overlay-GvL"></a>
+            <a href="modern-museum.html" class="text-GvL">
                 <h2 class="wit header-spacing">Modern Museum</h2>
                 <p class="wit">Het eerste project binnen de opleiding was het maken van een online magazine. Vanuit mijn
                     interesse in kunst had ik veel vraagtekens bij de komst van 'Instagram musea'. Dit heb ik verwerkt
                     in mijn online magazine.</p>
-            </div>
+            </a>
         </div>
     </div>
 
