--- a/Gezichten-van-Limburg.html
+++ b/Gezichten-van-Limburg.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Gezichten van Limburg</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -31,7 +31,9 @@
         <div class="clear-fix"></div>
     </div>
     <div class="header-gvl">
+
         <h1 class="center orange">Gezichten van Limburg</h1>
+        <p class="orange center">2021 - SHCL</p>
         <img class="foto-gvl" src="assets/headerGvL.png" alt="">
     </div>
 
@@ -87,18 +89,19 @@
         </div>
     </div>
     <div class="groter-margin">
-        <img src="assets/insta1.png" alt="">
-        <img src="assets/insta2.png" alt="">
-        <img src="assets/insta3.png" alt="">
-        <img src="assets/kaart1.png" alt="">
-        <img src="assets/kaart2.png" alt="">
+        <img class="insta1" src="assets/insta1.png" alt="">
+        <img class="insta2" src="assets/insta2.png" alt="">
+        <img class="insta1" src="assets/insta3.png" alt="">
+        <img class="groter-margin" src="assets/kaart1.png" alt="">
+        <img class="groter-margin right" src="assets/kaart2.png" alt="">
+        <div class="clear-fix"></div>
     </div>
-    <img src="assets/web1.png" alt="">
-    <img src="assets/web2.png" alt="">
-    <img src="assets/web3.png" alt="">
-    <img src="assets/web4.png" alt="">
+    <img class="web" src="assets/web1.png" alt="">
+    <img class="web" src="assets/web2.png" alt="">
+    <img class="web" src="assets/web3.png" alt="">
+    <img class="web" src="assets/web4.png" alt="">
     <a href="Gezichten-van-Limburg.html">
-        <img src="assets/pijl.png" alt=""></a>
+        <img class="pijl-img" src="assets/pijl.png" alt=""></a>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script src="js/script.js"></script>
 </body>
